--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#about"><button>About</button></a>
         <a href="#skills"><button>Skills</button></a>
         <a href="#experience"><button>Experience</button></a>
+        <a href="#interest"><button>Interest</button></a>
     </nav>
     <main>
         <section>
@@ -66,9 +67,23 @@
                         大二上學期時的網路程式設計期末報告是要跟甲班同學合作完成一個網路賣場，這除了讓我對程式撰寫更加熟悉，也讓我更懂得如何跟別人進行溝通。
                     </p>
                     <div class="sale">
-                        <img src="image/charitysale1.jpg" style="height: 200px; width: 260px; border-radius: 15px;">
-                        <img src="image/prepare.jpg" style="height: 200px; width: 260px; border-radius: 15px;"><br>
+                        <img src="image/charitysale1.jpg" class="sale_pic">
+                        <img src="image/prepare.jpg" class="sale_pic"><br>
                         管理學義賣
+                    </div>
+                </article>
+            </a>
+        <hr>
+            <a name="interest">
+                <article>
+                    <p class="int_title">Interest</p>
+                    <div>
+                        <img src="image/run.jpg" class="run">
+                        <p class="run_p">我從小就很喜歡到處跑來跑去，上國小後發現自己跑得又比同班同學快，漸漸地就越來越喜歡這項運動。而上國中後參加學校運動會更是確定了自己比很多人都跑得還快，在國三時甚至被找去參加校外比賽獲得了1600公尺接力第一名及400公尺第二名。在上了高中加入田徑隊後，原本擔心會不會因為很辛苦而不再喜歡，沒想到我對跑步的熱愛已經超越了那些辛苦，因此即使到了現在，只要有機會能跑步我都會參加。</p>
+                        <img src="image/ocarina.jpg" class="ocarina">
+                        <p class="ocarina_p">國小時因為班導在放學後會把我們留下來練習陶笛，所以一開始我沒有很喜歡吹陶笛，雖然在表演和參加音樂比賽獲得好成績時會很開心，但練習過程真的感到非常痛苦，是一直到高中發現大家都不會，只有我會之後才開始喜歡，而現在也是有機會就會在家裡吹一下放鬆心情。</p>
+                        <img src="image/sing.jpg" class="sing" style="float: right;">
+                        <p class="sing_p">上了高中後開始偶爾會和同學去KTV唱歌，在宿舍也常常和室友放音樂跟著一起唱，即使現在自己住在外面也還是會在房間放音樂唱歌。而且唱歌能讓我很好的放鬆心情，已經是我生活中不可或缺的一部份了。</p>
                     </div>
                 </article>
             </a>
