--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Noto+Serif+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Noto+Serif+TC&family=Shippori+Mincho+B1&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        個人履歷網站
+        习惯は第二の天性なり
     </header>
     <nav>
         <a href="#about"><button>About</button></a>
